--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
+  "name": "major_team",
+  "version": "1.0.0",
+  "license": "MIT",
+  "private": "true",
   "dependencies": {
+    "@hotwired/stimulus": "^3.0.0",
+    "@hotwired/turbo-rails": "^7.0.0",
+    "@popperjs/core": "^2.11.0",
     "@rails/webpacker": "5.4.4",
+    "bootstrap": "^5.3.0",
     "webpack": "4.46.0",
     "webpack-cli": "3.3.12"
   },
   "devDependencies": {
-    "webpack-dev-server": "3"
+    "webpack-dev-server": "3",
+    "yarn": "^1.22.22"
+  },
+  "scripts": {
+    "build": "webpack"
   }
 }
